Saral-OneClick/Saral-Automation/AWS/2-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "saral_igw"
  }
}
